2#ENTREGA/y.output
   0  $accept : file $end

   1  file :
   2       | file stmt

   3  stmt : pubOuConstOrNone tipo astOrNon ID initOrNon ';'

   4  initOrNon :
   5            | init

   6  pubOuConstOrNone : cnstOrNon
   7                   | PUBLIC cnstOrNon

   8  astOrNon :
   9           | '*'

  10  tipo : INTEGER
  11       | STRING
  12       | NUMBER
  13       | VOID

  14  init : ATR init1
  15       | '(' prmtsOrNon ')' crpOrNon

  16  init1 :
  17        | INT
  18        | cnstOrNon STR
  19        | REAL
  20        | ID

  21  prmtsOrNon :
  22             | parametros

  23  crpOrNon :
  24           | corpo

  25  cnstOrNon :
  26            | CONST

  27  parametros : parametro
  28             | parametro ',' parametros

  29  parametro : tipo astOrNon ID

  30  corpo : '{' prmtNonOrMore instrNonOrMore '}'

  31  prmtNonOrMore :
  32                | parametro ';' prmtNonOrMore

  33  instrNonOrMore :
  34                 | instrucao instrNonOrMore

  35  instrucao : IF expressao THEN instrucao els
  36            | DO instrucao WHILE expressao ';'
  37            | FOR lvalue IN expressao upOrDown expressao stp DO instrucao
  38            | expressao ';'
  39            | corpo
  40            | BREAK inteirOrNon ';'
  41            | CONTINUE inteirOrNon ';'
  42            | lvalue '#' expressao ';'

  43  stp :
  44      | STEP expressao

  45  upOrDown : UPTO
  46           | DOWNTO

  47  els :
  48      | ELSE instrucao

  49  inteirOrNon :
  50              | INT

  51  lvalue : ID
  52         | lvalue '[' expressao ']'
  53         | '*' lvalue

  54  expressao : INT
  55            | REAL
  56            | STR
  57            | lvalue
  58            | '(' expressao ')'
  59            | expressao '(' args ')'
  60            | expressao '(' ')'
  61            | '-' expressao
  62            | '&' lvalue
  63            | '~' expressao
  64            | lvalue INCR
  65            | lvalue DECR
  66            | INCR lvalue
  67            | DECR lvalue
  68            | expressao '*' expressao
  69            | expressao '/' expressao
  70            | expressao '%' expressao
  71            | expressao '+' expressao
  72            | expressao '-' expressao
  73            | expressao '<' expressao
  74            | expressao '>' expressao
  75            | expressao GE expressao
  76            | expressao LE expressao
  77            | expressao '=' expressao
  78            | expressao NE expressao
  79            | expressao '&' expressao
  80            | expressao '|' expressao
  81            | lvalue ATR expressao

  82  args : expressao
  83       | args ',' expressao

state 0
	$accept : . file $end  (0)
	file : .  (1)

	.  reduce 1

	file  goto 1


state 1
	$accept : file . $end  (0)
	file : file . stmt  (2)
	cnstOrNon : .  (25)

	$end  accept
	CONST  shift 2
	PUBLIC  shift 3
	VOID  reduce 25
	INTEGER  reduce 25
	STRING  reduce 25
	NUMBER  reduce 25

	stmt  goto 4
	pubOuConstOrNone  goto 5
	cnstOrNon  goto 6


state 2
	cnstOrNon : CONST .  (26)

	.  reduce 26


state 3
	pubOuConstOrNone : PUBLIC . cnstOrNon  (7)
	cnstOrNon : .  (25)

	CONST  shift 2
	VOID  reduce 25
	INTEGER  reduce 25
	STRING  reduce 25
	NUMBER  reduce 25

	cnstOrNon  goto 7


state 4
	file : file stmt .  (2)

	.  reduce 2


state 5
	stmt : pubOuConstOrNone . tipo astOrNon ID initOrNon ';'  (3)

	VOID  shift 8
	INTEGER  shift 9
	STRING  shift 10
	NUMBER  shift 11
	.  error

	tipo  goto 12


state 6
	pubOuConstOrNone : cnstOrNon .  (6)

	.  reduce 6


state 7
	pubOuConstOrNone : PUBLIC cnstOrNon .  (7)

	.  reduce 7


state 8
	tipo : VOID .  (13)

	.  reduce 13


state 9
	tipo : INTEGER .  (10)

	.  reduce 10


state 10
	tipo : STRING .  (11)

	.  reduce 11


state 11
	tipo : NUMBER .  (12)

	.  reduce 12


state 12
	stmt : pubOuConstOrNone tipo . astOrNon ID initOrNon ';'  (3)
	astOrNon : .  (8)

	'*'  shift 13
	ID  reduce 8

	astOrNon  goto 14


state 13
	astOrNon : '*' .  (9)

	.  reduce 9


state 14
	stmt : pubOuConstOrNone tipo astOrNon . ID initOrNon ';'  (3)

	ID  shift 15
	.  error


state 15
	stmt : pubOuConstOrNone tipo astOrNon ID . initOrNon ';'  (3)
	initOrNon : .  (4)

	ATR  shift 16
	'('  shift 17
	';'  reduce 4

	initOrNon  goto 18
	init  goto 19


state 16
	init : ATR . init1  (14)
	init1 : .  (16)
	cnstOrNon : .  (25)

	INT  shift 20
	REAL  shift 21
	ID  shift 22
	CONST  shift 2
	STR  reduce 25
	';'  reduce 16

	init1  goto 23
	cnstOrNon  goto 24


state 17
	init : '(' . prmtsOrNon ')' crpOrNon  (15)
	prmtsOrNon : .  (21)

	VOID  shift 8
	INTEGER  shift 9
	STRING  shift 10
	NUMBER  shift 11
	')'  reduce 21

	tipo  goto 25
	prmtsOrNon  goto 26
	parametros  goto 27
	parametro  goto 28


state 18
	stmt : pubOuConstOrNone tipo astOrNon ID initOrNon . ';'  (3)

	';'  shift 29
	.  error


state 19
	initOrNon : init .  (5)

	.  reduce 5


state 20
	init1 : INT .  (17)

	.  reduce 17


state 21
	init1 : REAL .  (19)

	.  reduce 19


state 22
	init1 : ID .  (20)

	.  reduce 20


state 23
	init : ATR init1 .  (14)

	.  reduce 14


state 24
	init1 : cnstOrNon . STR  (18)

	STR  shift 30
	.  error


state 25
	parametro : tipo . astOrNon ID  (29)
	astOrNon : .  (8)

	'*'  shift 13
	ID  reduce 8

	astOrNon  goto 31


state 26
	init : '(' prmtsOrNon . ')' crpOrNon  (15)

	')'  shift 32
	.  error


state 27
	prmtsOrNon : parametros .  (22)

	.  reduce 22


state 28
	parametros : parametro .  (27)
	parametros : parametro . ',' parametros  (28)

	','  shift 33
	')'  reduce 27


state 29
	stmt : pubOuConstOrNone tipo astOrNon ID initOrNon ';' .  (3)

	.  reduce 3


state 30
	init1 : cnstOrNon STR .  (18)

	.  reduce 18


state 31
	parametro : tipo astOrNon . ID  (29)

	ID  shift 34
	.  error


state 32
	init : '(' prmtsOrNon ')' . crpOrNon  (15)
	crpOrNon : .  (23)

	'{'  shift 35
	';'  reduce 23

	crpOrNon  goto 36
	corpo  goto 37


state 33
	parametros : parametro ',' . parametros  (28)

	VOID  shift 8
	INTEGER  shift 9
	STRING  shift 10
	NUMBER  shift 11
	.  error

	tipo  goto 25
	parametros  goto 38
	parametro  goto 28


state 34
	parametro : tipo astOrNon ID .  (29)

	.  reduce 29


state 35
	corpo : '{' . prmtNonOrMore instrNonOrMore '}'  (30)
	prmtNonOrMore : .  (31)

	VOID  shift 8
	INTEGER  shift 9
	STRING  shift 10
	NUMBER  shift 11
	INT  reduce 31
	REAL  reduce 31
	ID  reduce 31
	STR  reduce 31
	DO  reduce 31
	IF  reduce 31
	FOR  reduce 31
	BREAK  reduce 31
	CONTINUE  reduce 31
	INCR  reduce 31
	DECR  reduce 31
	'&'  reduce 31
	'~'  reduce 31
	'-'  reduce 31
	'*'  reduce 31
	'('  reduce 31
	'{'  reduce 31
	'}'  reduce 31

	tipo  goto 25
	parametro  goto 39
	prmtNonOrMore  goto 40


state 36
	init : '(' prmtsOrNon ')' crpOrNon .  (15)

	.  reduce 15


state 37
	crpOrNon : corpo .  (24)

	.  reduce 24


state 38
	parametros : parametro ',' parametros .  (28)

	.  reduce 28


state 39
	prmtNonOrMore : parametro . ';' prmtNonOrMore  (32)

	';'  shift 41
	.  error


state 40
	corpo : '{' prmtNonOrMore . instrNonOrMore '}'  (30)
	instrNonOrMore : .  (33)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	DO  shift 46
	IF  shift 47
	FOR  shift 48
	BREAK  shift 49
	CONTINUE  shift 50
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	'{'  shift 35
	'}'  reduce 33

	corpo  goto 58
	instrNonOrMore  goto 59
	instrucao  goto 60
	lvalue  goto 61
	expressao  goto 62


state 41
	prmtNonOrMore : parametro ';' . prmtNonOrMore  (32)
	prmtNonOrMore : .  (31)

	VOID  shift 8
	INTEGER  shift 9
	STRING  shift 10
	NUMBER  shift 11
	INT  reduce 31
	REAL  reduce 31
	ID  reduce 31
	STR  reduce 31
	DO  reduce 31
	IF  reduce 31
	FOR  reduce 31
	BREAK  reduce 31
	CONTINUE  reduce 31
	INCR  reduce 31
	DECR  reduce 31
	'&'  reduce 31
	'~'  reduce 31
	'-'  reduce 31
	'*'  reduce 31
	'('  reduce 31
	'{'  reduce 31
	'}'  reduce 31

	tipo  goto 25
	parametro  goto 39
	prmtNonOrMore  goto 63


state 42
	expressao : INT .  (54)

	.  reduce 54


state 43
	expressao : REAL .  (55)

	.  reduce 55


state 44
	lvalue : ID .  (51)

	.  reduce 51


state 45
	expressao : STR .  (56)

	.  reduce 56


state 46
	instrucao : DO . instrucao WHILE expressao ';'  (36)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	DO  shift 46
	IF  shift 47
	FOR  shift 48
	BREAK  shift 49
	CONTINUE  shift 50
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	'{'  shift 35
	.  error

	corpo  goto 58
	instrucao  goto 64
	lvalue  goto 61
	expressao  goto 62


state 47
	instrucao : IF . expressao THEN instrucao els  (35)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	.  error

	lvalue  goto 65
	expressao  goto 66


state 48
	instrucao : FOR . lvalue IN expressao upOrDown expressao stp DO instrucao  (37)

	ID  shift 44
	'*'  shift 56
	.  error

	lvalue  goto 67


state 49
	instrucao : BREAK . inteirOrNon ';'  (40)
	inteirOrNon : .  (49)

	INT  shift 68
	';'  reduce 49

	inteirOrNon  goto 69


state 50
	instrucao : CONTINUE . inteirOrNon ';'  (41)
	inteirOrNon : .  (49)

	INT  shift 68
	';'  reduce 49

	inteirOrNon  goto 70


state 51
	expressao : INCR . lvalue  (66)

	ID  shift 44
	'*'  shift 56
	.  error

	lvalue  goto 71


state 52
	expressao : DECR . lvalue  (67)

	ID  shift 44
	'*'  shift 56
	.  error

	lvalue  goto 72


state 53
	expressao : '&' . lvalue  (62)

	ID  shift 44
	'*'  shift 56
	.  error

	lvalue  goto 73


state 54
	expressao : '~' . expressao  (63)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	.  error

	lvalue  goto 65
	expressao  goto 74


state 55
	expressao : '-' . expressao  (61)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	.  error

	lvalue  goto 65
	expressao  goto 75


state 56
	lvalue : '*' . lvalue  (53)

	ID  shift 44
	'*'  shift 56
	.  error

	lvalue  goto 76


state 57
	expressao : '(' . expressao ')'  (58)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	.  error

	lvalue  goto 65
	expressao  goto 77


state 58
	instrucao : corpo .  (39)

	.  reduce 39


state 59
	corpo : '{' prmtNonOrMore instrNonOrMore . '}'  (30)

	'}'  shift 78
	.  error


state 60
	instrNonOrMore : instrucao . instrNonOrMore  (34)
	instrNonOrMore : .  (33)

	INT  shift 42
	REAL  shift 43
	ID  shift 44
	STR  shift 45
	DO  shift 46
	IF  shift 47
	FOR  shift 48
	BREAK  shift 49
	CONTINUE  shift 50
	INCR  shift 51
	DECR  shift 52
	'&'  shift 53
	'~'  shift 54
	'-'  shift 55
	'*'  shift 56
	'('  shift 57
	'{'  shift 35
	'}'  reduce 33

	corpo  goto 58
	instrNonOrMore  goto 79
	instrucao  goto 60
	lvalue  goto 61
	expressao  goto 62


state 61
	instrucao : lvalue . '#' expressao ';'  (42)
	lvalue : lvalue . '[' expressao ']'  (52)
	expressao : lvalue .  (57)
	expressao : lvalue . INCR  (64)
	expressao : lvalue . DECR  (65)
	expressao : lvalue . ATR expressao  (81)

	INCR  shift 80
	DECR  shift 81
	ATR  shift 82
	'['  shift 83
	'#'  shift 84
	NE  reduce 57
	GE  reduce 57
	LE  reduce 57
	'|'  reduce 57
	'&'  reduce 57
	'='  reduce 57
	'<'  reduce 57
	'>'  reduce 57
	'-'  reduce 57
	'+'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'('  reduce 57
	';'  reduce 57


state 62
	instrucao : expressao . ';'  (38)
	expressao : expressao . '(' args ')'  (59)
	expressao : expressao . '(' ')'  (60)
	expressao : expressao . '*' expressao  (68)
	expressao : expressao . '/' expressao  (69)
	expressao : expressao . '%' expressao  (70)
	expressao : expressao . '+' expressao  (71)
	expressao : expressao . '-' expressao  (72)
	expressao : expressao . '<' expressao  (73)
	expressao : expressao . '>' expressao  (74)
	expressao : expressao . GE expressao  (75)
	expressao : expressao . LE expressao  (76)
	expressao : expressao . '=' expressao  (77)
	expressao : expressao . NE expressao  (78)
	expressao : expressao . '&' expressao  (79)
	expressao : expressao . '|' expressao  (80)

	NE  shift 85
	GE  shift 86
	LE  shift 87
	'|'  shift 88
	'&'  shift 89
	'='  shift 90
	'<'  shift 91
	'>'  shift 92
	'-'  shift 93
	'+'  shift 94
	'*'  shift 95
	'/'  shift 96
	'%'  shift 97
	'('  shift 98
	';'  shift 99
	.  error


state 63
	prmtNonOrMore : parametro ';' prmtNonOrMore .  (32)

	.  reduce 32


state 64
	instrucao : DO instrucao . WHILE expressao ';'  (36)

	WHILE  shift 100
	.  error


state 65
	lvalue : lvalue . '[' expressao ']'  (52)
	expressao : lvalue .  (57)
	expressao : lvalue . INCR  (64)
	expressao : lvalue . DECR  (65)
	expressao : lvalue . ATR expressao  (81)

	INCR  shift 80
	DECR  shift 81
	ATR  shift 82
	'['  shift 83
	DO  reduce 57
	THEN  reduce 57
	UPTO  reduce 57
	DOWNTO  reduce 57
	STEP  reduce 57
	NE  reduce 57
	GE  reduce 57
	LE  reduce 57
	'|'  reduce 57
	'&'  reduce 57
	'='  reduce 57
	'<'  reduce 57
	'>'  reduce 57
	'-'  reduce 57
	'+'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'('  reduce 57
	';'  reduce 57
	')'  reduce 57
	','  reduce 57
	']'  reduce 57


state 66
	instrucao : IF expressao . THEN instrucao els  (35)
	expressao : expressao . '(' args ')'  (59)
	expressao : expressao . '(' ')'  (60)
	expressao : expressao . '*' expressao  (68)
	expressao : expressao . '/' expressao  (69)
	expressao : expressao . '%' expressao  (70)
	expressao : expressao . '+' expressao  (71)
	expressao : expressao . '-' expressao  (72)
	expressao : expressao . '<' expressao  (73)
	expressao : expressao . '>' expressao  (74)
	expressao : expressao . GE expressao  (75)
	expressao : expressao . LE expressao  (76)
	expressao : expressao . '=' expressao  (77)
	expressao : expressao . NE expressao  (78)
	expressao : expressao . '&' expressao  (79)
	expressao : expressao . '|' expressao  (80)

	THEN  shift 101
	NE  shift 85
	GE  shift 86
	LE  shift 87
	'|'  shift 88
	'&'  shift 89
	'='  shift 90
	'<'  shift 91
	'>'  shift 92
	'-'  shift 93
	'+'  shift 94
	'*'  shift 95
	'/'  shift 96
	'%'  shift 97
	'('  shift 98
	.  error


state 67
	instrucao : FOR lvalue . IN expressao upOrDown expressao stp DO instrucao  (37)
	lvalue : lvalue . '[' expressao ']'  (52)

	IN  shift 102
	'['  shift 83
	.  error


state 68
	inteirOrNon : INT .  (50)

	.  reduce 50


state 69
	instrucao : BREAK inteirOrNon . ';'  (40)

	';'  shift 103
	.  error


state 70
	instrucao : CONTINUE inteirOrNon . ';'  (41)

	';'  shift 104
	.  error


state 71
	lvalue : lvalue . '[' expressao ']'  (52)
	expressao : INCR lvalue .  (66)

	'['  shift 83
	DO  reduce 66
	THEN  reduce 66
	UPTO  reduce 66
	DOWNTO  reduce 66
	STEP  reduce 66
	NE  reduce 66
	GE  reduce 66
	LE  reduce 66
	'|'  reduce 66
	'&'  reduce 66
	'='  reduce 66
	'<'  reduce 66
	'>'  reduce 66
	'-'  reduce 66
	'+'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'('  reduce 66
	';'  reduce 66
	')'  reduce 66
	','  reduce 66
	']'  reduce 66


state 72
	lvalue : lvalue . '[' expressao ']'  (52)
	expressao : DECR lvalue .  (67)

	'['  shift 83
	DO  reduce 67
	THEN  reduce 67
	UPTO  reduce 67
	DOWNTO  reduce 67
	STEP  reduce 67
	NE  reduce 67
	GE  reduce 67
	LE  reduce 67
	'|'  reduce 67
	'&'  reduce 67
	'='  reduce 67
	'<'  reduce 67
	'>'  reduce 67
	'-'  reduce 67
	'+'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'('  reduce 67
	';'  reduce 67
	')'  reduce 67
	','  reduce 67
	']'  reduce 67


state 73
	lvalue : lvalue . '[' expressao ']'  (52)
	expressao : '&' lvalue .  (62)
